Modifs html et css homepage

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <meta name="description" content="">
     <title>Blog Jean Forteroche - écrivain</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <style>
+    <!--<style>
         .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -25,9 +24,8 @@
                 font-size: 3.5rem;
             }
         }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+    </style>-->
+    <link href="dist/css/style.css" rel="stylesheet">
 </head>
 
 <body cz-shortcut-listen="true">
@@ -55,10 +53,6 @@
                     <a class="nav-link disabled" href="#">Archives</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
 
@@ -66,37 +60,38 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">Billet simple pour l'Alaska</h1>
-                <p>Jean Forteroche, auteur de récits d'aventure, vous fait découvrir en avant-première, au travers de ce blog, son dernier roman. Vous pourrez y lire des extraits de chapitres et y réagir en les commentant. L'auteur désire ainsi, par la magie
-                    d'internet, faire évoluer le rôle de lecteur et la relation auteur-lecteur.</p>
+                <p>Jean Forteroche, auteur de récits d'aventure, vous fait découvrir en avant-première, au travers de ce blog, son dernier roman. Vous pourrez y lire des extraits de chapitres et y réagir en les commentant. L'auteur désire ainsi, faire évoluer
+                    le rôle de lecteur et sa relation à l'auteur.</p>
                 <p><a class="btn btn-primary btn-lg" href="#" role="button">Biographie Jean Forteroche</a></p>
             </div>
         </div>
+
 
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <h2>Chapitre 1</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
                     </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Lire la suite</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Lire la suite</a></p>
                 </div>
                 <div class="col-md-4">
                     <h2>Chapitre 2</h2>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
                     </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Lire la suite</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Lire la suite</a></p>
                 </div>
                 <div class="col-md-4">
                     <h2>Chapitre 3</h2>
                     <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
                         amet risus.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Lire la suite</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Lire la suite</a></p>
                 </div>
             </div>
         </div>
     </main>
 
-    <footer class="container bg-primary">
+    <footer class="container-fluid">
         <p>Copyright © David Blanchet - 2019. Tous droits réservés</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -104,8 +99,6 @@
         window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script>
     <script src="dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
-
-    <div id="plgfrscroltwofrtoContainer"><span class="topUpTo"></span></div>
 </body>
 
 </html>
