Page accueil : réglages footer, menu + modifs css

--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
                     <a class="nav-link" href="#">Accueil<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Extraits</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Biographie</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#">Se connecter</a>
                 </li>
                 <li class="nav-item">
@@ -44,7 +38,7 @@
                 <h1 class="display-3">Billet simple pour l'Alaska</h1>
                 <p>Jean Forteroche, auteur de récits d'aventure, vous fait découvrir en avant-première, au travers de ce blog, son dernier roman. Vous pourrez y lire des extraits de chapitres et y réagir en les commentant. L'auteur désire ainsi, faire évoluer
                     le rôle de lecteur et sa relation à l'auteur.</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Biographie Jean Forteroche</a></p>
+                <p><a class="btn btn-primary btn-lg" href="#" role="button">Extraits et commentaires</a></p>
             </div>
         </div>
 
@@ -73,7 +67,7 @@
     </main>
 
     <footer class="container-fluid">
-        <p>Copyright © David Blanchet - 2019. Tous droits réservés</p>
+        <p>Copyright © <a href="http://cv-devweb.dblanchet.fr/" target="blank">David Blanchet</a> - 2019. Tous droits réservés</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>
