--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Jean Forteroche présente, en avant-première sur son blog, son dernier roman : Billet simple pour l'Alaska.">
     <title>Blog Jean Forteroche - écrivain</title>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="dist/css/style.css" rel="stylesheet">
@@ -26,14 +26,14 @@
                     <a class="nav-link" href="#">Se connecter</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Archives</a>
+                    <a class="nav-link" href="#">Archives</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <main role="main">
-        <div class="jumbotron">
+        <div class="jumbotron mt-5 text-white">
             <div class="container">
                 <h1 class="display-3">Billet simple pour l'Alaska</h1>
                 <p>Jean Forteroche, auteur de récits d'aventure, vous fait découvrir en avant-première, au travers de ce blog, son dernier roman. Vous pourrez y lire des extraits de chapitres et y réagir en les commentant. L'auteur désire ainsi, faire évoluer
@@ -43,32 +43,82 @@
         </div>
 
         <div class="container">
+            <h2 class="text-primary text-center mt-3 pt-3">Chapitres en cours</h2>
             <div class="row">
-                <div class="col-md-4">
-                    <h2>Chapitre 1</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                    </p>
-                    <p><a class="btn btn-primary" href="#" role="button">Lire la suite</a></p>
+                <div class="card col-md-4  pt-3" style="width: 18rem;">
+                    <img src="dist/images/wooden-cabin.jpg" class="card-img-top" alt="aurore boréale">
+                    <div class="card-body">
+                        <h3 class="card-title text-primary">Chapitre 6</h3>
+                        <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
+                            dui.
+                        </p>
+                        <a href="#" class="btn btn-primary">Lire l'extrait - Commenter</a>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <h2>Chapitre 2</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-                    </p>
-                    <p><a class="btn btn-primary" href="#" role="button">Lire la suite</a></p>
+                <div class="card col-md-4  pt-3" style="width: 18rem;">
+                    <img src="dist/images/lake-blue.jpg" class="card-img-top" alt="aurore boréale">
+                    <div class="card-body">
+                        <h3 class="card-title text-primary">Chapitre 5</h3>
+                        <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
+                            dui.
+                        </p>
+                        <a href="#" class="btn btn-primary">Lire l'extrait - Commenter</a>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <h2>Chapitre 3</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-                        amet risus.</p>
-                    <p><a class="btn btn-primary" href="#" role="button">Lire la suite</a></p>
+                <div class="card col-md-4  pt-3" style="width: 18rem;">
+                    <img src="dist/images/adventure-alaska.jpg" class="card-img-top" alt="aurore boréale">
+                    <div class="card-body">
+                        <h3 class="card-title text-primary">Chapitre 4</h3>
+                        <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
+                            dui.
+                        </p>
+                        <a href="#" class="btn btn-primary">Lire l'extrait - Commenter</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <h2 class="text-primary text-center mt-3 pt-3">Archives - chapitres précédents</h2>
+            <div class="row">
+                <div class="card col-md-4  pt-3" style="width: 18rem;">
+                    <img src="dist/images/wooden-cabin.jpg" class="card-img-top" alt="aurore boréale">
+                    <div class="card-body">
+                        <h3 class="card-title text-primary">Chapitre 3</h3>
+                        <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
+                            dui.
+                        </p>
+                        <a href="#" class="btn btn-primary">Lire l'extrait</a>
+                    </div>
+                </div>
+                <div class="card col-md-4  pt-3" style="width: 18rem;">
+                    <img src="dist/images/lake-blue.jpg" class="card-img-top" alt="aurore boréale">
+                    <div class="card-body">
+                        <h3 class="card-title text-primary">Chapitre 2</h3>
+                        <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
+                            dui.
+                        </p>
+                        <a href="#" class="btn btn-primary">Lire l'extrait</a>
+                    </div>
+                </div>
+                <div class="card col-md-4  pt-3" style="width: 18rem;">
+                    <img src="dist/images/adventure-alaska.jpg" class="card-img-top" alt="aurore boréale">
+                    <div class="card-body">
+                        <h3 class="card-title text-primary">Chapitre 1</h3>
+                        <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
+                            dui.
+                        </p>
+                        <a href="#" class="btn btn-primary">Lire l'extrait</a>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 
-    <footer class="container-fluid">
-        <p>Copyright © <a href="http://cv-devweb.dblanchet.fr/" target="blank">David Blanchet</a> - 2019. Tous droits réservés</p>
+    <footer class="container-fluid text-white text-center bg-primary">
+        <p>Copyright © <a class="text-light" href="http://cv-devweb.dblanchet.fr/" target="blank">David Blanchet</a> - 2019. Tous droits réservés</p>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>
         window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
