--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="#">Se connecter</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Archives</a>
+                    <a class="nav-link" href="#archives">Archives</a>
                 </li>
             </ul>
         </div>
@@ -38,15 +38,15 @@
                 <h1 class="display-3">Billet simple pour l'Alaska</h1>
                 <p>Jean Forteroche, auteur de récits d'aventure, vous fait découvrir en avant-première, au travers de ce blog, son dernier roman. Vous pourrez y lire des extraits de chapitres et y réagir en les commentant. L'auteur désire ainsi, faire évoluer
                     le rôle de lecteur et sa relation à l'auteur.</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Extraits et commentaires</a></p>
+                <p><a class="btn btn-primary btn-lg" href="#chapters" role="button">Extraits et commentaires</a></p>
             </div>
         </div>
 
         <div class="container">
-            <h2 class="text-primary text-center mt-3 pt-3">Chapitres en cours</h2>
+            <h2 class="text-primary text-center mt-3 pt-3" id="chapters">Chapitres en cours</h2>
             <div class="row">
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/wooden-cabin.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="dist/images/adventure-alaska.jpg" class="card-img-top" alt="aurore boréale">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 6</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/lake-blue.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="dist/images/eagle-on-seashore.jpg" class="card-img-top" alt="aurore boréale">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 5</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/adventure-alaska.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="dist/images/wood-mountains.jpg" class="card-img-top" alt="aurore boréale">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 4</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -79,10 +79,10 @@
         </div>
 
         <div class="container">
-            <h2 class="text-primary text-center mt-3 pt-3">Archives - chapitres précédents</h2>
+            <h2 class="text-primary text-center mt-3 pt-3" id="archives">Archives - chapitres précédents</h2>
             <div class="row">
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/wooden-cabin.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="dist/images/lake-blue.jpg" class="card-img-top" alt="aurore boréale">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 3</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/lake-blue.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="dist/images/wooden-cabin.jpg" class="card-img-top" alt="aurore boréale">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 2</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/adventure-alaska.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="dist/images/man-in-airport.jpg" class="card-img-top" alt="aurore boréale">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 1</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -123,6 +123,7 @@
     <script>
         window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script>
+    <script src="dist/js/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
 </body>
 
