Changement des chemins des images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Jean Forteroche présente, en avant-première sur son blog, son dernier roman : Billet simple pour l'Alaska.">
     <title>Blog Jean Forteroche - écrivain</title>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="dist/css/style.css" rel="stylesheet">
+    <link href="public/css/style.css" rel="stylesheet">
 </head>
 
 <body cz-shortcut-listen="true">
@@ -46,7 +46,7 @@
             <h2 class="text-primary text-center mt-3 pt-3" id="chapters">Chapitres en cours</h2>
             <div class="row">
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/adventure-alaska.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="public/images/adventure-alaska.jpg" class="card-img-top" alt="traîneau de chiens">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 6</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/eagle-on-seashore.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="public/images/eagle-on-seashore.jpg" class="card-img-top" alt="aigle sur la plage">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 5</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/wood-mountains.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="public/images/wood-mountains.jpg" class="card-img-top" alt="cîmes de montagne et forêt">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 4</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -82,7 +82,7 @@
             <h2 class="text-primary text-center mt-3 pt-3" id="archives">Archives - chapitres précédents</h2>
             <div class="row">
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/lake-blue.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="public/images/lake-blue.jpg" class="card-img-top" alt="lac de montagne turquoise">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 3</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/wooden-cabin.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="public/images/wooden-cabin.jpg" class="card-img-top" alt="cabane en rondins de bois">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 2</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="dist/images/man-in-airport.jpg" class="card-img-top" alt="aurore boréale">
+                    <img src="public/images/man-in-airport.jpg" class="card-img-top" alt="homme seul dans un aéroport">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 1</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
