--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h2 class="text-primary text-center mt-3 pt-3" id="archives">Archives - chapitres précédents</h2>
             <div class="row">
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="public/images/lake-blue.jpg" class="card-img-top" alt="lac de montagne turquoise">
+                    <img src="public/images/wooden-cabin.jpg" class="card-img-top" alt="ma cabane en rondins de bois">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 3</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="card col-md-4  pt-3" style="width: 18rem;">
-                    <img src="public/images/wooden-cabin.jpg" class="card-img-top" alt="cabane en rondins de bois">
+                    <img src="public/images/welcome.jpg" class="card-img-top" alt="panneau welcome in Alaska">
                     <div class="card-body">
                         <h3 class="card-title text-primary">Chapitre 2</h3>
                         <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
